k8s/2.3/infra/task_2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-service
spec:
  selector:
    app: web-app 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
